--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
     id 'war'
+    id 'jacoco'
 }
 
 group = 'com.zerobase'
@@ -33,6 +34,13 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+}
+
+jacocoTestReport {
+    reports {
+        csv.enabled true
+        xml.enabled true
+    }
 }
 
 tasks.named('test') {
